# SFML_LIFE_EMULATION

./: CMakeLists.txt  main.cpp  setup.sh
src/: Game.cpp  Game.h
src/Entities/: Entity.cpp  Entity.h  Herbivoro.cpp  Herbivoro.h  Metazoo.cpp  Metazoo.h  Planta.cpp  Planta.h
src/States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
src/UI/: Button.cpp  Button.h
src/imgui/: imconfig.h  imgui-SFML.cpp
